--- a/parque_banque_server/src/main/resources/templates/createlogin.html
+++ b/parque_banque_server/src/main/resources/templates/createlogin.html
@@ -16,12 +16,12 @@
     </script>
 </head>
 <body>
-    <h1>Vul gebruikersnaam een wachtwoord in</h1>
+    <h1>Vul gebruikersnaam en wachtwoord in</h1>
     <form action="#" th:action="@{/klant-worden}" th:object="${createLoginFormBean}" method="post">
         <table>
             <tr>
                 <td> <label for="username">Gebruikersnaam</label></td>
-                <td> <input id="username" type="text" required pattern="[A-Za-z0-9]{5,}" th:field="*{username}"
+                <td> <input id="username" type="text" required pattern="[A-Za-z0-9]{5,255}" th:field="*{username}"
                             title="Gebruikersnaam moet minimaal 5 tekens lang zijn (alleen letters en cijfers)"
                             oninvalid="setCustomValidity('Gebruikersnaam moet minimaal 5 tekens lang zijn (alleen letters en cijfers)')"
                             oninput="setCustomValidity('')" /> </td>
@@ -30,7 +30,7 @@
             <tr>
                 <td> <label for="password">Wachtwoord</label></td>
                 <td> <input id="password" type="password" required
-                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%?&]{8,}$"
+                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%?&]{8,255}$"
                             th:field="*{password}"
                             title="Wachtwoord moet minstens 8 tekens lang zijn, en in elk geval een hoofdletter, een kleine letter, een cijfer een een speciaal teken (@$!%?&) bevatten"
                             oninvalid="setCustomValidity('Wachtwoord moet minstens 8 tekens lang zijn, en in elk ' +
