Verfijning aanmelden nieuw bedrijf, oa validaties

--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Nieuw bedrijf aanmaken bij Parque Banque</title>
@@ -38,25 +37,31 @@
 <body>
 <img src="../static/logo-small.png"/>
 <h1>Bedrijf aanmelden bij Parque Banque</h1>
-<p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p><br>
-
+<p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p>
+<p>Velden met een * zijn verplicht.</p><br>
 <!--Formulier met nieuwe bedrijfsgegevens-->
 <form th:action="@{/nieuw-bedrijf-aanmaken}" method="post" th:object="${company}">
-    <label>KvK-nummer</label>
-    <input type="text" th:field="*{kvkNr}">
+    <label>Kvk-nummer *</label>
+    <input type="text" th:field="*{kvkNr}"
+           title="Het KvK-nummer bestaat uit 8 cijfers."
+           oninvalid="setCustomValidity('Controleer of het KvK-nummer klopt')">
     <br/><br/>
-    <label>Btw-nummer</label>
-    <input type="text" th:field="*{btwNr}">
+    <label>Btw-nummer *</label>
+    <input type="text" th:field="*{btwNr}"
+           required pattern="^(?=.*[A-Z])(?=.*[A-Z]){14,}$"
+           title="Het btw-nummer bestaat uit 14 tekens en begint met een landcode, bijvoorbeeld NL."
+           oninvalid="setCustomValidity('Controleer of het btw-nummer klopt')">
         <br><br>
-    <label>Bedrijfsnaam</label>
+    <label>Bedrijfsnaam *</label>
     <input type="text" th:field="*{name}">
         <br><br>
-    <label>Sector</label>
+    <label>Sector *</label>
     <select th:field="*{sectorName}">
         <option th:each="sector : ${sectoren}" th:value="${sector}" th:text="${sector.getName()}"/>
     </select>
         <br><br>
     <button type="submit" name="action" value="send">Bedrijf aanmelden</button>
 </form>
+
 </body>
 </html>
