--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -10,6 +10,7 @@
         <form action="/particuliere-rekening-openen" method="post" th:object="${privateAccount}">
 <!--    <form th:action="@{}" method="post" th:object="${}">-->
         <input type="submit" name="submitbutton" value="bevestigen">
+        <input type="submit" name="action" value="terug">
 
     </form>
 </body>
