--- a/parque_banque_server/src/main/resources/templates/confirmprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmprivateaccount.html
@@ -7,7 +7,11 @@
 <body>
 <h1> Gefeliciteerd! U heeft een nieuwe rekening geopend!</h1>
     <h2>Detailinformatie nieuwe bankrekening</h2>
+
     <h1>IBAN: <span th:text="${iban}" /></h1>
     <h1>Saldo: <span th:text="${balanceCent}" /></h1>
+<form action="/rekening-overzicht">
+    <input type="submit" value="rekeningoverzicht">
+</form>
 </body>
 </html>
