Formulier nieuw bedrijf aanmaken validaties

--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -40,7 +40,7 @@
     <label for="bedrijfsNaam">Bedrijfsnaam</label>
     <input id="bedrijfsNaam" type="text" readonly th:field="${companyFormBean.name}"/><br>
     <label for="sector">Sector</label>
-    <input id="sector" type="text" readonly th:field="${companyFormBean.sectorName}"/><br><br> <!--Todo: display sectornaam-->
+    <input id="sector" type="text" readonly th:field="${companyFormBean.sectorName}"/><br><br>
 </div>
 
 <button type="submit" name="action" value="rekeningOpenen"> Rekening openen</button>
