--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -45,20 +45,27 @@
     <input type="text" th:field="*{kvkNr}"
            required pattern="^(?=.*\d){8,}$"
            title="Het KvK-nummer bestaat uit 8 cijfers."
-           oninvalid="setCustomValidity('Controleer of het KvK-nummer klopt')">
+           oninvalid="setCustomValidity('Controleer of het KvK-nummer klopt')"
+           oninput="setCustomValidity('')">
     <br/><br/>
+
     <label>Btw-nummer *</label>
     <input type="text" th:field="*{btwNr}"
            required pattern="^(?=.*[A-Z])(?=.*[A-Z]){14,}$"
            title="Het btw-nummer bestaat uit 14 tekens en begint met een landcode, bijvoorbeeld NL."
-           oninvalid="setCustomValidity('Controleer of het btw-nummer klopt')">
+           oninvalid="setCustomValidity('Controleer of het btw-nummer klopt')"
+           oninput="setCustomValidity('')">
         <br><br>
+
     <label>Bedrijfsnaam *</label>
-    <input type="text" th:field="*{name}">
+    <input type="text" th:field="*{name}"
+           oninput="setCustomValidity('')">
         <br><br>
+
     <label>Sector *</label>
     <select th:field="*{sectorName}">
-        <option th:each="sector : ${sectoren}" th:value="${sector.getName()}" th:text="${sector.getName()}"/>
+        <option th:each="sector : ${sectoren}" th:value="${sector.getName()}" th:text="${sector.getName()}"
+                oninput="setCustomValidity('')"/>
     </select>
         <br><br>
     <button type="submit" name="action" value="send">Bedrijf aanmelden</button>
