herstellen na merge

--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -81,24 +81,24 @@
 <br/>
 
 
-<head>Prive Rekening</head>
-<table>
-    <thead>
-    <tr>
-        <th>IBAN</th>
-        <th>Naam</th>
-        <th>Saldo</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:if="${privateaccounts.empty}">
-        <td colspan="3"> Geen rekeningen></td>
-    </tr>
-    <tr th:each="privateaccount : ${privateaccounts}">
-        <td th:text="${privateaccount.iban}"></td>
-        <td th:text="${privateaccount.firstname}"></td>
-        <td th:text="${privateaccount.balanceCent}"></td>
-    </tr>
-    </tbody>
-</table>
+<!--<head>Prive Rekening</head>-->
+<!--<table>-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--        <th>IBAN</th>-->
+<!--        <th>Naam</th>-->
+<!--        <th>Saldo</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
+<!--    <tbody>-->
+<!--    <tr th:if="${privateaccounts.empty}">-->
+<!--        <td colspan="3"> Geen rekeningen></td>-->
+<!--    </tr>-->
+<!--    <tr th:each="privateaccount : ${privateaccounts}">-->
+<!--        <td th:text="${privateaccount.iban}"></td>-->
+<!--        <td th:text="${privateaccount.firstname}"></td>-->
+<!--        <td th:text="${privateaccount.balanceCent}"></td>-->
+<!--    </tr>-->
+<!--    </tbody>-->
+<!--</table>-->
 </body>
