Link op een aantal pagina's gezet voor uitloggen en logoling naar home
De link refereert naar een GetMapping in de LoginController
De Getmapping vertelt de sessie om te stoppen.

--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -28,7 +28,7 @@
         </style>
 </head>
 <body>
-<img src="../static/logo-small.png"/>
+<a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80px" height="45px"></a>
 <h1>Klopt het allemaal? Controleer de bedrijfsgegevens</h1>
 
 <form th:action="@{/nieuw-bedrijf-aanmaken}" method="post" th:object="${companyFormBean}">
