--- a/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
@@ -5,6 +5,7 @@
     <title>Bevestiging Nieuwe Particuliere Rekening Geopend</title>
 </head>
 <body>
+<a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80px" height="45px"></a>
 <h1> Gefeliciteerd! U heeft een nieuwe rekening geopend!</h1>
     <h2>Detailinformatie nieuwe bankrekening</h2>
     <h1>IBAN: <span th:text="${iban}" /></h1>
