--- a/parque_banque_server/src/main/resources/templates/employeehome.html
+++ b/parque_banque_server/src/main/resources/templates/employeehome.html
@@ -5,6 +5,8 @@
     <title>Homepagina medewerkers</title>
 </head>
 <body>
+<a href="/uitloggen">Uitloggen</a>
+<br>
     <h1>Welkom terug <span th:text="${employee.firstName}"></span></h1>
 
     Pagina's voor <span th:text="${employee.role.name}"></span>:
