--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -35,7 +35,9 @@
     </style>
 </head>
 <body>
-<img src="../static/logo-small.png"/>
+<a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink"></a>
+<a href="/uitloggen">Uitloggen</a>
+<br>
 <h1>Bedrijf aanmelden bij Parque Banque</h1>
 <p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p>
 <p>Velden met een * zijn verplicht.</p><br>
