--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -5,6 +5,8 @@
     <title>nieuwe particuliere rekening openen</title>
 </head>
 <body>
+<a href="/uitloggen">Uitloggen</a>
+<br>
 <h1>Nieuwe Particuliere Rekening Openen</h1>
 <h2>Weet u het zeker?</h2>
         <form action="/particuliere-rekening-openen" method="post" th:object="${privateAccount}">
