--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -5,6 +5,8 @@
     <title>Overzicht bedrijven</title>
 </head>
 <body>
+<a href="/uitloggen">Uitloggen</a>
+<br>
     <h1>Overzicht bedrijfsrekeningen</h1>
 </body>
 </html>
