--- a/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
@@ -5,6 +5,8 @@
     <title>Overzicht Particulier</title>
 </head>
 <body>
+<a href="/uitloggen">Uitloggen</a>
+<br>
     <h1>Overzicht particuliere rekeningen</h1>
 </body>
 </html>
