--- a/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
@@ -5,8 +5,12 @@
     <title>Bevestiging Nieuwe Particuliere Rekening Geopend</title>
 </head>
 <body>
-<h1> Gefeliciteerd! U heeft een nieuwe rekening geopend!</h1>
-    <h2>Detailinformatie nieuwe bankrekening</h2>
+
+<h1> Gefeliciteerd! U heeft een nieuwe rekening geopend voor
+    <span th:if="${businessAccount}" class="businessClass" th:text="${name}"/>
+    <span th:if="${privateAccount}" class="privateClass" th:text="${name}"/>
+</h1>
+<h2>Detailinformatie nieuwe bankrekening</h2>
     <h1>IBAN: <span th:text="${iban}" /></h1>
     <h1>Saldo: <span th:text="${balanceCent}" /></h1>
 </body>
